[gd_scene load_steps=10 format=3 uid="uid://cygqr6s06vlpw"]

[ext_resource type="Texture2D" uid="uid://4jhrtysamy3o" path="res://Global/Game_UI/History_Scoreboard/Assets/SkorBox_Normal.png" id="1_kbea4"]
[ext_resource type="Texture2D" uid="uid://5glb6ba6gwqw" path="res://Global/Game_UI/History_Scoreboard/Assets/SkorBox_Pressed.png" id="2_k0ut3"]
[ext_resource type="Texture2D" uid="uid://ch8r8r0x2k1ts" path="res://Global/Game_UI/History_Scoreboard/Assets/SkorBox_Hover.png" id="3_o7sgo"]
[ext_resource type="FontFile" uid="uid://wavv527jhmt1" path="res://Global/Game_UI/Fonts/K2D-Bold.ttf" id="4_m0f2w"]
[ext_resource type="Script" path="res://Global/Game_UI/History_Scoreboard/Lib/skor_box.gd" id="4_xb4wl"]
[ext_resource type="FontFile" uid="uid://btisj7uyosjpa" path="res://Global/Game_UI/Fonts/K2D-Regular.ttf" id="5_v14gm"]
[ext_resource type="Texture2D" uid="uid://b3hlee15a3wpv" path="res://Global/Game_UI/EndGame_Scoreboard/Assets/Icon_Money.png" id="6_e5c6m"]
[ext_resource type="Texture2D" uid="uid://bu72sxv87frh4" path="res://Global/Game_UI/EndGame_Scoreboard/Assets/Icon_Happy.png" id="7_q70b3"]
[ext_resource type="Texture2D" uid="uid://c0v7stua6h3l1" path="res://Global/Game_UI/EndGame_Scoreboard/Assets/Icon_Hospital.png" id="8_2gs26"]

[node name="SkorBox" type="TextureButton"]
texture_normal = ExtResource("1_kbea4")
texture_pressed = ExtResource("2_k0ut3")
texture_hover = ExtResource("3_o7sgo")
script = ExtResource("4_xb4wl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_m0f2w")
theme_override_font_sizes/font_size = 32
text = "Yudith"

[node name="Time" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("5_v14gm")
theme_override_font_sizes/font_size = 24
text = "16:30 @ 20/06/2024"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IconMoney" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_e5c6m")
stretch_mode = 3

[node name="TotalMoney" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_v14gm")
theme_override_font_sizes/font_size = 18
text = "Rp1.000.000"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 10
alignment = 2

[node name="IconHappy" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("7_q70b3")
stretch_mode = 3

[node name="PercentageHappy" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_v14gm")
theme_override_font_sizes/font_size = 18
text = "50%"

[node name="IconHealth" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("8_2gs26")
stretch_mode = 3

[node name="PercentageHealth" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_v14gm")
theme_override_font_sizes/font_size = 18
text = "100%"
